<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgTitle"
            android:layout_width="match_parent"
            android:layout_height="343dp"
            app:srcCompat="@drawable/title01" />

        <Button
            android:id="@+id/btnGotoPlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnPlay" />

        <Button
            android:id="@+id/btnGotoStory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnStory" />

        <Button
            android:id="@+id/btnGotoOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnOptions" />

    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layMainFrags"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="495dp">

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>